<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_wight"
    android:padding="@dimen/x20"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/butMe"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linMeTop"
            style="@style/linStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/linStyle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/linStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/x15"
                        android:src="@mipmap/ic_me_head001" />

                    <TextView
                        android:id="@+id/tvMeName"
                        style="@style/textTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    style="@style/linStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/x15"
                        android:src="@mipmap/ic_me_head003" />

                    <TextView
                        android:id="@+id/tvMeMoblie"
                        style="@style/textMain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/linStyle"
                android:layout_width="0dp"
                android:layout_weight="1">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/me_civ_img"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@mipmap/ic_launcher" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_marginBottom="20dp"
            android:background="@color/view_color" />

        <LinearLayout
            android:id="@+id/linMeMenu1"
            style="@style/linStyle"
            android:layout_marginTop="@dimen/x15"
            android:orientation="horizontal"
            android:padding="@dimen/x25">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_me_wallet" />

            <TextView
                style="@style/textMain"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/x30"
                android:layout_weight="1"
                android:text="@string/meMenu1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_me_next" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x2"
            android:background="@color/view_color" />

        <LinearLayout
            android:id="@+id/linMeMenu2"
            style="@style/linStyle"
            android:orientation="horizontal"
            android:padding="@dimen/x25">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_me_mind" />

            <TextView
                style="@style/textMain"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/x30"
                android:layout_weight="1"
                android:text="@string/meMenu2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_me_next" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x2"
            android:background="@color/view_color"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linMeMenu3"
            style="@style/linStyle"
            android:orientation="horizontal"
            android:padding="@dimen/x25"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_me_menu003" />

            <TextView
                style="@style/textMain"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/x30"
                android:layout_weight="1"
                android:text="@string/meMenu3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_me_next" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x2"
            android:background="@color/view_color" />

        <LinearLayout
            android:id="@+id/linMeMenu4"
            style="@style/linStyle"
            android:orientation="horizontal"
            android:padding="@dimen/x25">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_me_transaction" />

            <TextView
                style="@style/textMain"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/x30"
                android:layout_weight="1"
                android:text="@string/meMenu4" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_me_next" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x2"
            android:background="@color/view_color" />

        <LinearLayout
            android:id="@+id/linMeMenu5"
            style="@style/linStyle"
            android:orientation="horizontal"
            android:padding="@dimen/x25">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_me_about" />

            <TextView
                style="@style/textMain"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/x30"
                android:layout_weight="1"
                android:text="@string/meMenu5" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_me_next" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x2"
            android:background="@color/view_color" />

        <LinearLayout
            android:id="@+id/linMeMenu6"
            style="@style/linStyle"
            android:orientation="horizontal"
            android:padding="@dimen/x25">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_me_invitation" />

            <TextView
                style="@style/textMain"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/x30"
                android:layout_weight="1"
                android:text="@string/meMenu6" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_me_next" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x2"
            android:background="@color/view_color" />

        <LinearLayout
            android:id="@+id/linMeMenu7"
            style="@style/linStyle"
            android:orientation="horizontal"
            android:padding="@dimen/x25">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_me_feedback" />

            <TextView
                style="@style/textMain"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/x30"
                android:layout_weight="1"
                android:text="@string/meMenu7" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_me_next" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x2"
            android:background="@color/view_color"
            android:visibility="gone" />

        <!--设置内进行修改密码操作-->
        <LinearLayout
            android:id="@+id/linMeMenu8"
            style="@style/linStyle"
            android:orientation="horizontal"
            android:padding="@dimen/x25"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_me_menu004" />

            <TextView
                style="@style/textMain"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/x30"
                android:layout_weight="1"
                android:text="设置" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_me_next" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x2"
            android:layout_marginBottom="20dp"
            android:background="#ccc" />

        <Button
            android:id="@+id/butMe"
            style="@style/butKuang"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/x20"
            android:text="退出" />

    </LinearLayout>


</ScrollView>
